edit the App.css

--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,10 @@
   }
 }
 
-.anuphan-rugular {
+.text {
   font-family: "AnuphanRegular";
 }
 
-.anuphan-semibold {
+.topic {
   font-family: "AnuphanSemiBold";
 }
